# dokimasia

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  README.md  hk.pkl  mise.toml  mkdocs.yml  pyproject.toml
.github/: VOUCHED.td  vouch-pr-close.md
.github/workflows/: vouch-pr.yml
docs/: mcp-acceptance.md
docs/superpowers/plans/: 2026-05-14-cli-spy-scaffolding.md  2026-05-14-uv-migration.md
docs/superpowers/specs/: 2026-05-14-cli-spy-scaffolding-design.md  2026-05-14-uv-migration-design.md
docs/web/: api.md  getting-started.md  index.md
docs/web/stylesheets/: extra.css
examples/doki-ledger/: README.md
src/dokimasia/: pytest.py
src/dokimasia/agents/: base.py  claude_code.py  pi.py
src/dokimasia/audit/: assertions.py  model.py
src/dokimasia/core/: json.py  model.py  runner.py  scenarios.py  template.py
src/dokimasia/examples/: __init__.py
src/dokimasia/examples/doki_ledger/: __init__.py  ledger.py  server.py
src/dokimasia/pytest/: __init__.py  cmd.py  fixtures.py  mcp.py  tool.py
src/dokimasia/scaffold/: __init__.py  cli_spy.py
src/dokimasia/suite/: __init__.py  env.py  layout.py  safety.py  spy.py
tests/: conftest.py  test_cli_spy.py  test_core.py  test_docs.py  test_doki_ledger_example.py  test_doki_ledger_mcp_e2e_contract.py  test_helper_skill_e2e_contract.py  test_package_cleanup.py  test_pytest_cmd_matcher.py  test_pytest_command_assertions.py  test_pytest_integration.py  test_pytest_mcp_assertions.py  test_pytest_tool_assertions.py  test_suite_env.py  test_suite_layout.py  test_suite_safety.py  test_suite_spy.py
tests/e2e/: README.md  live_support.py  test_doki_ledger_mcp_live.py  test_helper_skill_live.py
tests/e2e/helper_skill/actions/: stamp_helper.py
tests/e2e/helper_skill/skills/helper-stamp/: SKILL.md
tests/fixtures/: pi_mcp_adapter_events.json
