[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dokimasia"
version = "0.1.0"
description = "Generic agent end-to-end evaluation harness"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0",
  "python-slugify>=8.0.4",
]

[project.entry-points.pytest11]
dokimasia = "dokimasia.pytest"

[project.scripts]
doki-ledger = "dokimasia.examples.doki_ledger.server:main"

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 120
target-version = "py311"
