[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dokimasia"
version = "0.1.0"
description = "Generic agent end-to-end evaluation harness"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "jmespath>=1.0.1",
  "pytest>=8.0",
  "python-slugify>=8.0.4",
]

[project.entry-points.pytest11]
dokimasia = "dokimasia.pytest"

[project.scripts]
doki-ledger = "dokimasia.examples.doki_ledger.server:main"

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
markers = [
  "agent_e2e: opt-in tests that run real agent CLIs",
  "mcp_e2e: opt-in tests that exercise live MCP tool use",
]

[tool.ruff]
line-length = 120
target-version = "py311"
